[metadata]
name = alphahub
version = 0.0.1
author = timolson
author_email = 
description = Basic client for alphahub.us
long_description = file: README.md
long_description_content_type = text/md
keywords = 
url = 
project_urls =
    Bug Tracker = 

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.6
install_requires = 
    requests

[options.packages.find]
where = src 
